[project]
name = "stihia"
dynamic = ["version"]
description = "Python SDK for the Stihia real-time threat detection API for AI systems."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [
    { name = "Stihia", email = "support@stihia.ai" },
]
keywords = ["ai", "security", "threat-detection", "guardrails", "llm", "prompt-injection", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/stihia-ai/stihia-sdk-python"
Documentation = "https://github.com/stihia-ai/stihia-sdk-python#readme"
Repository = "https://github.com/stihia-ai/stihia-sdk-python"
Issues = "https://github.com/stihia-ai/stihia-sdk-python/issues"
Changelog = "https://github.com/stihia-ai/stihia-sdk-python/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.8",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
fallback-version = "0"

[tool.hatch.build.targets.wheel]
packages = ["src/stihia"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific
]

[tool.ruff.lint.isort]
known-first-party = ["stihia"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
